Fix spacing

--- a/capstone/src/main/webapp/style.css
+++ b/capstone/src/main/webapp/style.css
@@ -1,30 +1,28 @@
-
-section.introduction{
-    background-color: #FCE181;
-    background-size: cover;
-    height:50%;
+section.introduction {
+  background-color: #fce181;
+  background-size: cover;
+  height: 50%;
 }
-div.col.s12.tb{
+div.col.s12.tb {
   color: white;
-  background-color:#026670;
+  background-color: #026670;
 }
-li.tab.col.s4{
-  background-color: #EDEAE5;
+li.tab.col.s4 {
+  background-color: #edeae5;
 }
 
-div.nav-wrapper{
-  background-color: #026670; 
+div.nav-wrapper {
+  background-color: #026670;
   color: silver;
 }
-footer.page-footer{
+footer.page-footer {
   background-color: #026670;
   color: silver;
   line-height: 50px;
   padding: 0 20px;
-
 }
 
-sub.flow-text{
-  color:grey;
+sub.flow-text {
+  color: grey;
   font-size: smaller;
 }
